--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,5 +29,17 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <activity
+            android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
+            android:exported="true">
+            <intent-filter android:label="flutter_web_auth">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI, "kakao${6671c3a9b377c8f302c17c14e2c940f2}://oauth" 형식 -->
+                <data android:scheme="kakao${6671c3a9b377c8f302c17c14e2c940f2}" android:host="oauth"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
