--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,14 @@ migrate_working_dir/
 *.iws
 .idea/
 
+# env file
+*.env
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+
+lib/login/test/**
 
 # Flutter/Dart/Pub related
 **/doc/api/
