--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,12 @@ dependencies:
   provider: ^6.0.4
   flutter_local_notifications: ^15.1.0+1
   flutter_svg: ^2.0.7
+  flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.1
+
+  google_sign_in: ^6.1.4
+  cloud_firestore: ^4.4.3
+  cloud_functions: ^4.0.11
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +76,7 @@ flutter:
   assets:
     - asset/image/
     - asset/icons/
+    - asset/config/.env
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
