3주차 스프린트 알람 화면

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>kakao6671c3a9b377c8f302c17c14e2c940f2</string>
+				<string>naverloginhyunseok</string>
 			</array>
 		</dict>
 		<dict>
@@ -45,10 +46,40 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+    <key>naverServiceAppUrlScheme</key>
+    <string>naverloginhyunseok</string>
+        <key>naverConsumerKey</key>
+        <string>5UA2mzoDVvp6SpDo81Ml</string>
+        <key>naverConsumerSecret</key>
+        <string>2WbJ_p8NRI</string>
+        <key>naverServiceAppName</key>
+        <string>naverlogintest</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSAppTransportSecurity</key>
+        <dict>
+           <key>NSAllowsArbitraryLoads</key>
+           <true/>
+           <key>NSExceptionDomains</key>
+           <dict>
+              <key>naver.com</key>
+              <dict>
+                 <key>NSExceptionRequiresForwardSecrecy</key>
+                 <false/>
+                 <key>NSIncludesSubdomains</key>
+                 <true/>
+              </dict>
+              <key>naver.net</key>
+              <dict>
+                 <key>NSExceptionRequiresForwardSecrecy</key>
+                 <false/>
+                 <key>NSIncludesSubdomains</key>
+                 <true/>
+              </dict>
+            </dict>
+        </dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -64,5 +95,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+    <string>카메라를 사용하여 사진을 촬영합니다.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>사진 라이브러리에서 이미지를 선택합니다.</string>
 </dict>
 </plist>
