--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.3
+  firebase_messaging: ^14.7.1
   sign_in_with_apple: ^3.0.0
   crypto: ^3.0.3
   http: ^1.1.0
