--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   bottom_sheet: ^3.1.1
   built_collection: ^5.1.1
   built_value: ^8.3.3
+  keyboard_attachable: ^2.1.0
+  keyboard_dismisser: ^3.0.0
+
+
 
 dev_dependencies:
   flutter_test:
