--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>78739178434-v9ou55jemaf18vrhhcvuu86q5amquugg.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.78739178434-v9ou55jemaf18vrhhcvuu86q5amquugg</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>78739178434-21rmjq7q7b387p04hqm4o2ar3o0lrscr.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDT7DJWKIjNkVP9fpY1PqP__8a641UhseY</string>
 	<key>GCM_SENDER_ID</key>
