회원탈퇴 로직 추가 및 20번 화면 90% 연동

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -72,6 +72,8 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라를 사용하여 사진을 촬영합니다.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+    <string>이 앱의 사진을 갤러리에 저장하려고 합니다</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진 라이브러리에서 이미지를 선택합니다.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
