--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
 
                 <data android:scheme="signinwithapple" />
                 <data android:path="callback" />
+                <data android:scheme="https"
+                    android:host="moing.page.link" />
             </intent-filter>
         </activity>
         <activity
