--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.15.1
   firebase_auth: ^4.7.3
+  firebase_dynamic_links: ^5.4.4
   firebase_messaging: ^14.7.1
   sign_in_with_apple: ^3.0.0
   crypto: ^3.0.3
@@ -78,6 +78,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   path_provider: ^2.1.1
   fluttertoast: ^8.2.4
+  share_plus: ^7.2.1
 
 
 dev_dependencies:
