다이나믹 링크 수정

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,15 +18,14 @@
             android:name="com.aboutyou.dart_packages.sign_in_with_apple.SignInWithAppleCallback"
             android:exported="true"
             >
-            <intent-filter>
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data android:scheme="signinwithapple" />
                 <data android:path="callback" />
-                <data android:scheme="https"
-                    android:host="moing.page.link" />
+                <data android:host="moing.page.link" android:scheme="https"/>
             </intent-filter>
         </activity>
         <activity
