--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,7 +55,7 @@ post_install do |installer|
             '$(inherited)',
 
             ## dart: [PermissionGroup.calendarWriteOnly, PermissionGroup.calendar (iOS 16 and below)]
-            'PERMISSION_EVENTS=1',
+            # 'PERMISSION_EVENTS=1',
 
             ## dart: [PermissionGroup.calendarFullAccess, PermissionGroup.calendar (iOS 17 and above)]
             # 'PERMISSION_EVENTS_FULL_ACCESS=1',
@@ -79,19 +79,19 @@ post_install do |installer|
             'PERMISSION_PHOTOS=1',
 
             ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
-            'PERMISSION_LOCATION=1',
+            # 'PERMISSION_LOCATION=1',
 
             ## dart: PermissionGroup.notification
             # 'PERMISSION_NOTIFICATIONS=1',
 
             ## dart: PermissionGroup.mediaLibrary
-            'PERMISSION_MEDIA_LIBRARY=1',
+            # 'PERMISSION_MEDIA_LIBRARY=1',
 
             ## dart: PermissionGroup.sensors
-            'PERMISSION_SENSORS=1',
+            # 'PERMISSION_SENSORS=1',
 
             ## dart: PermissionGroup.bluetooth
-            'PERMISSION_BLUETOOTH=1',
+            # 'PERMISSION_BLUETOOTH=1',
 
             ## dart: PermissionGroup.appTrackingTransparency
             # 'PERMISSION_APP_TRACKING_TRANSPARENCY=1',
