--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -73,17 +73,33 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>카메라를 사용하여 사진을 촬영합니다.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>사용자 간 연결을 위해 권한이 필요합니다.</string>
+	<key>NSMotionUsageDescription</key>
+	<string>모션 감지를 위해 권한이 필요합니다.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>이 앱의 사진을 갤러리에 저장하려고 합니다</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진 라이브러리에서 이미지를 선택합니다.</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>리마인더 알림을 위한 권한이 필요합니다.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+    <string>블루투스 사용 권한이 필요합니다.</string>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>블루투스 사용 권한을 항상 허가해주세요.</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>미디어 사용 권한이 필요합니다.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>사용자 위치 권한을 항상 허가해주세요.</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>사용자 위치 권한이 필요합니다.</string>
+
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
 		<string>fetch</string>
-		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
