테스트플라이트 12차 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   path_provider: ^2.1.1
   fluttertoast: ^8.2.4
   share_plus: ^7.2.1
+  dropdown_button2: ^2.3.9
 
 
 dev_dependencies:
