--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -103,6 +103,7 @@
 	<array>
 		<string>audio</string>
 		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
