--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -84,7 +84,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>카메라를 사용하여 사진을 촬영합니다.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>사용자 간 연결을 위해 권한이 필요합니다.</string>
+	<string>소모임 및 프로필 이미지 등록, 미션 인증을 위해 사진 라이브러리 접근 권한이 필요합니다.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>사용자 위치 권한을 항상 허가해주세요.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
@@ -101,7 +101,6 @@
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>audio</string>
 		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
