테플 21차 수정 2차

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -102,6 +102,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
