--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>moing_flutter</string>
+	<string>MOING</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -43,6 +43,12 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>FirebaseDynamicLinksCustomDomains</key>
+	<array>
+		<string>https://soultalk.page.link</string>
+	</array>
+	<key>FlutterDeepLinkingEnabled</key>
+	<true/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>https</string>
@@ -84,7 +90,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>카메라를 사용하여 사진을 촬영합니다.</string>
 	<key>NSContactsUsageDescription</key>
-  <string>사용자 간 연결을 위해 권한이 필요합니다.</string>
+	<string>사용자 간 연결을 위해 권한이 필요합니다.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>사용자 위치 권한을 항상 허가해주세요.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
