딥링크 수정, 종료된 소모임일 때 에러 처리

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,7 +45,7 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>FirebaseDynamicLinksCustomDomains</key>
 	<array>
-		<string>https://soultalk.page.link</string>
+		<string>https://moing.page.link</string>
 	</array>
 	<key>FlutterDeepLinkingEnabled</key>
 	<true/>
