--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,3 @@
-def keystoreProperties = new Properties()
-def keystorePropertiesFile = rootProject.file('key.properties')
-if (keystorePropertiesFile.exists()) {
-    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-}
-
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -32,6 +26,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace "com.moing.moing_team"
     compileSdkVersion 33
@@ -58,7 +58,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 34
         multiDexEnabled true
-        // 혹시나 나중에 플레이스토어에 재등록할 경우 이 아래 부분 순서대로 2, "1.1"로 수정해야함
+        /// 1.0.0+3 이면, versionCode는 3(Integer)을 의미함. versionName은 1.0.0(String)을 의미함.
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         // manifestPlaceHolders
@@ -78,22 +78,6 @@ android {
             signingConfig signingConfigs.release
         }
     }
-
-    signingConfigs {
-        release {
-            keyAlias 'moing'
-            keyPassword '000719'
-            storeFile file('/Users/dihyeonee/StudioProjects/Moing_Flutter/release.keystore')
-            storePassword '000719'
-        }
-    }
-
-    buildTypes {
-        release {
-            signingConfig signingConfigs.release
-        }
-    }
-
 }
 
 flutter {
