--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,7 +43,7 @@
 		<dict>
             <key>CFBundleURLSchemes</key>
             <array>
-              <string>fb[APP_ID]</string>
+              <string>fb2417953345069946</string>
             </array>
           </dict>
 	</array>
