--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,6 +36,15 @@
                 <data android:host="moing.page.link" android:scheme="https"/>
             </intent-filter>
         </activity>
+        <activity android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
+            android:exported="true">
+            <intent-filter android:label="flutter_web_auth">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="kakao6671c3a9b377c8f302c17c14e2c940f2" android:host="oauth"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -85,13 +94,5 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <activity android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity">
-            <intent-filter android:label="flutter_web_auth">
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="kakao6671c3a9b377c8f302c17c14e2c940f2" android:host="oauth"/>
-            </intent-filter>
-        </activity>
     </application>
 </manifest>
