--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ dependencies:
   share_plus: ^7.2.1
   dropdown_button2: ^2.3.9
   app_tracking_transparency: ^2.0.4
+  amplitude_flutter: ^3.13.0
+
 
 dev_dependencies:
   flutter_test:
