:package: dotted_border 패키지 적용

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   amplitude_flutter: ^3.13.0
   readmore: ^2.1.0
   cached_network_image: ^3.3.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
